--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <title>AdminSunShop</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
+    <meta charset="utf-8">
+    <title>AdminSunShop</title>
+    <base href="/">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/font-awesome.min.css">
     <link rel="stylesheet" href="./assets/css/themify-icons.css">
     <link rel="stylesheet" href="./assets/css/metisMenu.css">
@@ -23,9 +23,10 @@
     <!-- modernizr css -->
     <script src="./assets/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
+
 <body>
-  <app-root></app-root>
-  <!-- jquery latest version -->
+    <app-root></app-root>
+    <!-- jquery latest version -->
     <script src="./assets/js/vendor/jquery-2.2.4.min.js"></script>
     <!-- bootstrap 4 js -->
     <script src="./assets/js/popper.min.js"></script>
@@ -42,8 +43,8 @@
     <!-- start zingchart js -->
     <script src="https://cdn.zingchart.com/zingchart.min.js"></script>
     <script>
-    zingchart.MODULESDIR = "https://cdn.zingchart.com/modules/";
-    ZC.LICENSE = ["569d52cefae586f634c54f86dc99e6a9", "ee6b7db5b51705a13dc2339db3edaf6d"];
+        zingchart.MODULESDIR = "https://cdn.zingchart.com/modules/";
+        ZC.LICENSE = ["569d52cefae586f634c54f86dc99e6a9", "ee6b7db5b51705a13dc2339db3edaf6d"];
     </script>
     <!-- all line chart activation -->
     <script src="./assets/js/line-chart.js"></script>
@@ -52,6 +53,11 @@
     <!-- others plugins -->
     <script src="./assets/js/plugins.js"></script>
     <script src="./assets/js/scripts.js"></script>
+    <script>
+        $(document).ready(function() {
+            $(".dropdown-toggle").dropdown();
+        });
+    </script>
 </body>
 
 </html>
