--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
     <!-- others css -->
     <link rel="stylesheet" href="./assets/css/typography.css">
     <link rel="stylesheet" href="./assets/css/default-css.css">
+    <link rel="stylesheet" href="./assets/css/toastr.css">
     <link rel="stylesheet" href="./assets/css/styles.css">
     <link rel="stylesheet" href="./assets/css/responsive.css">
     <!-- modernizr css -->
